crates/noseyparker-cli/tests/help/snapshots/test_noseyparker__help__help_github-2.snap
---
source: crates/noseyparker-cli/tests/help/mod.rs
expression: stdout
---
Interact with GitHub

By default, unauthenticated access is used. An optional personal access token can be specified using
the `NP_GITHUB_TOKEN` environment variable. Using a personal access token gives higher rate limits
and may make additional content accessible.

Usage: noseyparker github [OPTIONS] <COMMAND>

Commands:
  repos  Interact with GitHub repositories
  help   Print this message or the help of the given subcommand(s)

Options:
      --github-api-url <URL>
          Use the specified URL for GitHub API access
          
          If accessing a GitHub Enterprise Server instance, this value should be the entire base URL
          include the `api/v3` portion, e.g., `https://github.example.com/api/v3`.
          
          [default: https://api.github.com/]
          [aliases: api-url]

  -h, --help
          Print help (see a summary with '-h')

Global Options:
  -v, --verbose...
          Enable verbose output
          
          This can be repeated up to 3 times to enable successively more output.

      --color <MODE>
          Enable or disable colored output
          
          When this is "auto", colors are enabled when stdout is a tty.
          
          If the `NO_COLOR` environment variable is set, it takes precedence and is equivalent to
          `--color=never`.
          
          [default: auto]
          [possible values: auto, never, always]

      --progress <MODE>
          Enable or disable progress bars
          
          When this is "auto", progress bars are enabled when stderr is a tty.
          
          [default: auto]
          [possible values: auto, never, always]

Advanced Global Options:
      --rlimit-nofile <LIMIT>
          Set the rlimit for number of open files to LIMIT
          
          This should not need to be changed from the default unless you run into crashes from
          running out of file descriptors.
          
          [default: 16384]

      --sqlite-cache-size <SIZE>
          Set the cache size for sqlite connections to SIZE
          
          This has the effect of setting SQLite's `pragma cache_size=SIZE`. The default value is set
          to use a maximum of 1GiB for database cache. See
          <https://sqlite.org/pragma.html#pragma_cache_size> for more details.
          
          [default: -1048576]

      --enable-backtraces <BOOL>
          Enable or disable backtraces on panic
          
          This has the effect of setting the `RUST_BACKTRACE` environment variable to 1.
          
          [default: true]
          [possible values: true, false]

