crates/noseyparker-cli/tests/help/snapshots/test_noseyparker__help__help_github_repos_short-2.snap
---
source: crates/noseyparker-cli/tests/help/mod.rs
assertion_line: 152
expression: stdout
---
Interact with GitHub repositories

Usage: noseyparker github repos [OPTIONS] <COMMAND>

Commands:
  list  List repositories belonging to a specific user or organization
  help  Print this message or the help of the given subcommand(s)

Options:
      --github-api-url <URL>  Use the specified URL for GitHub API access [default:
                              https://api.github.com/] [aliases: --api-url]
  -h, --help                  Print help (see more with '--help')

Global Options:
  -v, --verbose...       Enable verbose output
  -q, --quiet            Suppress non-error feedback messages
      --color <MODE>     Enable or disable colored output [default: auto] [possible values: auto,
                         never, always]
      --progress <MODE>  Enable or disable progress bars [default: auto] [possible values: auto,
                         never, always]
      --ignore-certs     Ignore validation of TLS certificates
