crates/noseyparker-cli/tests/help/snapshots/test_noseyparker__help__help_report-2.snap
---
source: crates/noseyparker-cli/tests/help/mod.rs
assertion_line: 106
expression: stdout
---
Report detailed scan findings

Usage: noseyparker report [OPTIONS]

Options:
  -d, --datastore <PATH>
          Use the specified datastore
          
          [env: NP_DATASTORE=]
          [default: datastore.np]

  -h, --help
          Print help (see a summary with '-h')

Filtering Options:
      --max-matches <N>
          Limit the number of matches per finding to at most N
          
          A non-positive value means "no limit".
          
          [default: 3]

      --max-provenance <N>
          Limit the number of provenance entries per match to at most N
          
          A non-positive value means "no limit".
          
          [default: 3]

      --min-score <SCORE>
          Only report findings that have a mean score of at least N
          
          Scores are floating point numbers in the range [0, 1]. Use the value `0` to disable this
          filtering.
          
          Findings that do not have a score computed will be included regardless of this setting.
          
          [default: 0.05]

      --finding-status <STATUS>
          Include only findings with the assigned status

          Possible values:
          - accept: Findings with `accept` matches
          - reject: Findings with `reject` matches
          - mixed:  Findings with both `accept` and `reject` matches
          - null:   Findings without any `accept` or `reject` matches

      --suppress-redundant <BOOL>
          Suppress redundant matches and findings
          
          A match is considered redundant to another if they overlap significantly within the same
          blob and satisfy a handful of heuristics.
          
          [default: true]
          [possible values: true, false]

Output Options:
  -o, --output <PATH>
          Write output to the specified path
          
          If this argument is not provided, stdout will be used.

  -f, --format <FORMAT>
          Write output in the specified format

          Possible values:
          - human: A text-based format designed for humans
          - json:  Pretty-printed JSON format
          - jsonl: JSON Lines format
          - sarif: SARIF format (experimental)
          
          [default: human]

Global Options:
  -v, --verbose...
          Enable verbose output
          
          This can be repeated up to 3 times to enable successively more output.

  -q, --quiet
          Suppress non-error feedback messages
          
          This silences WARNING, INFO, DEBUG, and TRACE messages and disables progress bars. This
          overrides any provided verbosity and progress reporting options.

      --color <MODE>
          Enable or disable colored output
          
          When this is "auto", colors are enabled for stdout and stderr when they are terminals.
          
          If the `NO_COLOR` environment variable is set, it takes precedence and is equivalent to
          `--color=never`.
          
          [default: auto]
          [possible values: auto, never, always]

      --progress <MODE>
          Enable or disable progress bars
          
          When this is "auto", progress bars are enabled when stderr is a terminal.
          
          [default: auto]
          [possible values: auto, never, always]

      --ignore-certs
          Ignore validation of TLS certificates

Advanced Global Options:
      --rlimit-nofile <LIMIT>
          Set the rlimit for number of open files to LIMIT
          
          This should not need to be changed from the default unless you run into crashes from
          running out of file descriptors.
          
          [default: 16384]

      --sqlite-cache-size <SIZE>
          Set the cache size for SQLite connections to SIZE
          
          This has the effect of setting SQLite's `pragma cache_size=SIZE`. The default value is set
          to use a maximum of 1GiB for database cache. See
          <https://sqlite.org/pragma.html#pragma_cache_size> for more details.
          
          [default: -1048576]

      --enable-backtraces <BOOL>
          Enable or disable backtraces on panic
          
          This has the effect of setting the `RUST_BACKTRACE` environment variable to 1.
          
          [default: true]
          [possible values: true, false]
